--- a/assets/style.css
+++ b/assets/style.css
@@ -13,6 +13,8 @@ text {
 
 .title{
     background-color: white;
+    min-height: 33vh;
+    margin: 0% 5%;
 }
 
 #header {
@@ -25,8 +27,12 @@ text {
     align-items: center;
 }
 
+#transition-title {
+    margin-bottom: 5vh;
+}
+
 .header-left {
-    margin: 1% 0%;
+    margin: 1% 5%;
     font-size: 34px;
 }
 
