--- a/assets/style.css
+++ b/assets/style.css
@@ -31,7 +31,26 @@ text {
     display: flex; 
     align-items: center;
     z-index: 100;
+    visibility: hidden;
     max-height: 10vh;
+}
+
+#footer {
+    bottom: 0;
+    background-color: white;
+    position: fixed;
+    width: 100%;
+    display: flex; 
+    align-items: center;
+    z-index: 100;
+    visibility: hidden;
+    max-height: 10vh;
+}
+
+#contact {
+    margin: 1% 5%;
+    width: 100%;
+    font-size: large !important;
 }
 
 #transition-title {
