Add projects and Update experiences

--- a/assets/style.css
+++ b/assets/style.css
@@ -57,6 +57,15 @@ text {
     margin-bottom: 5vh;
 }
 
+#chart {
+    display: flex; 
+    align-items: center;
+}
+
+#skills-title {
+    padding-bottom: 10%;
+}
+
 .header-left {
     margin: 1% 5%;
     font-size: 34px;
@@ -72,6 +81,10 @@ text {
     margin: 0px 0px !important;
 }
 
+.chart {
+    text-align: center;
+}
+
 .link {
     font-style: italic;
     padding-left: 0cm;
@@ -81,4 +94,12 @@ text {
     min-height: 100vh !important;
     display: flex; 
     align-items: center;
+}
+
+.card-title {
+    background-color: #ffffff9c;
+}
+
+.card-content {
+    font-size: 12px !important;
 }
