--- a/assets/style.css
+++ b/assets/style.css
@@ -11,6 +11,7 @@ main {
     width: 90%;
     left: 5%;
     position: absolute;
+    padding-bottom: 10vh;
 }
 
 text {
@@ -55,6 +56,10 @@ text {
 
 #transition-title {
     margin-bottom: 5vh;
+}
+
+.projects {
+    display: inline-flex;
 }
 
 #chart {
